--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.0",
     "nodemon": "^2.0.20"
+  },
+  "engines": {
+    "node": "19.0.0"
   }
 }
