--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 dbconfig=mongodb+srv://Archas:qSBugbIZd6qOmyh6@cluster0.pg6nfmw.mongodb.net/?retryWrites=true&w=majority
 PORT=5000
-JWT_SECRET_KEY = gfg_jwt_secret_key
+JWT_SECRET_KEY = nflsnjnn1311312334wfsjnjdq
   
-TOKEN_HEADER_KEY = gfg_token_header_key
+TOKEN_HEADER_KEY = agjaskql12124
