--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.0",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "otp-generator": "^4.0.0"
   },
   "engines": {
     "node": "19.0.0"
