Forgot Password Completed

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 dbconfig=mongodb+srv://Archas:qSBugbIZd6qOmyh6@cluster0.pg6nfmw.mongodb.net/?retryWrites=true&w=majority
 PORT=5000
+password=eysfgrqlyxuxzbsm
