user/seller profile page data retrival api made

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 dbconfig=mongodb+srv://Archas:qSBugbIZd6qOmyh6@cluster0.pg6nfmw.mongodb.net/?retryWrites=true&w=majority
-PORT=5000
+# dbconfig=mongodb+srv://Anshuman:Anshuman2003@cluster0.fnytrhq.mongodb.net/?retryWrites=true&w=majority
+PORT=4000
 # JWT_SECRET_KEY = nflsnjnn1311312334wfsjnjdq
   
 # TOKEN_HEADER_KEY = agjaskql12124
