--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "geofencer": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.1",
     "multer": "^1.4.5-lts.1",
+    "node-geocoder": "^4.2.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "otp-generator": "^4.0.0"
