--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-dbconfig=mongodb+srv://Archas:qSBugbIZd6qOmyh6@cluster0.pg6nfmw.mongodb.net/?retryWrites=true&w=majority
-# dbconfig=mongodb+srv://Anshuman:Anshuman2003@cluster0.fnytrhq.mongodb.net/?retryWrites=true&w=majority
+# dbconfig=mongodb+srv://Archas:qSBugbIZd6qOmyh6@cluster0.pg6nfmw.mongodb.net/?retryWrites=true&w=majority
+dbconfig=mongodb+srv://Anshuman:Anshuman2003@cluster0.fnytrhq.mongodb.net/?retryWrites=true&w=majority
 PORT=4000
 # JWT_SECRET_KEY = nflsnjnn1311312334wfsjnjdq
   
